--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "nodemon": "^2.0.4",
     "request": "^2.88.2"
   }
